<resources>
    <string name="app_name">ScoreKeeper_w20</string>
    <string name="teamA_title">Team A</string>
    <string name="teamB_title">Team B</string>
    <string name="teamA_score">0</string>
    <string name="teamB_score">0</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="score_1">1</string>
    <string name="score_2">2</string>
    <string name="score_3">3</string>
    <string name="remember_scores_summary">Keeps the scores after the app is closed</string>
    <string name="remember_scores_title">Remember scores?</string>
    <string name="menu_settings">Settings</string>
    <string name="about">About</string>
</resources>
