<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:gravity="center"
        android:stretchColumns="0,1,2,3">

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="25dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/teamA_title"
            android:layout_span="2"
            android:gravity="center"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/teamB_title"
            android:layout_span="2"
            android:gravity="center"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="25dp">
        <TextView
            android:id="@+id/teamA_score"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/teamA_score"
            android:layout_span="2"
            android:gravity="center"/>
        <TextView
            android:id="@+id/teamB_score"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/teamB_score"
            android:layout_span="2"
            android:gravity="center"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="25dp">
        <Button
            android:id="@+id/teamA_decrease"
            android:text="@string/decrease"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_marginHorizontal="25dp"/>

        <Button
            android:id="@+id/teamA_increase"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/increase"
            android:layout_marginHorizontal="25dp" />
        <Button
            android:id="@+id/teamB_decrease"
            android:text="@string/decrease"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_marginHorizontal="25dp"/>
        <Button
            android:id="@+id/teamB_increase"
            android:text="@string/increase"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_marginHorizontal="25dp" />
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
        <RadioGroup
                android:id="@+id/scoreChange"
                android:layout_span="4"
                android:gravity="center"
                android:checkedButton="@id/score_1">
            <RadioButton
                android:id="@+id/score_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_1"
                />
            <RadioButton
                android:id="@+id/score_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_2" />
            <RadioButton
                android:id="@+id/score_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_3" />
        </RadioGroup>
    </TableRow>

</TableLayout>